DE243919 - Off-center request approval button in strategy review and design review defect fixed

--- a/src/main/cool/src/app/shared/components/design-review-exit-criteria/design-review-exit-criteria.component.css
+++ b/src/main/cool/src/app/shared/components/design-review-exit-criteria/design-review-exit-criteria.component.css
@@ -340,3 +340,7 @@ body.cui {
     color: #E2231A;
   }
 }
+
+.height-10{
+    height: 10px;
+}
